# KoHalluLens

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt
HalluLens/tasks/longwiki/: longwiki_main.py
HalluLens/tasks/refusal_test/: nonsense_name.py  round_robin_nonsense_name.py
HalluLens/tasks/shortform/: precise_wikiqa.py
HalluLens/utils/: generate_question.py
KoHalluLens/: README.md
KoHalluLens/data/wiki_data/: doc_goodwiki_not_exist_titles.txt
KoHalluLens/scripts/: task1_precisewikiqa.sh
KoHalluLens/tasks/refusal_test/: nonsense_mixed_entities.py  search.py
KoHalluLens/utils/: exp.py  lm.py
data/: download_data.py
data/wiki_data/: make_title_db.py
resources/: orgin_README.md
scripts/: task1_precisewikiqa.sh  task2_longwiki.sh  task3-1_mixedentities.sh  task3-2_generatedentities.sh
tasks/longwiki/: facthalu.py  ko_prompt_templates.py  longwiki_main.py  longwiki_utils.py
tasks/refusal_test/: entities_generation.py  ko_prompt.py  nonsense_mixed_entities.py  nonsense_name.py  round_robin_nonsense_name.py  search.py
tasks/shortform/: en_prompt.py  ko_prompt.py  precise_wikiqa.py
utils/: exp.py  generate_question.py  lm.py
