[project]
name = "kohallulens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic==0.72.0",
    "anyio==4.10.0",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "astor==0.8.1",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.5",
    "blake3==1.0.5",
    "bleach==6.2.0",
    "cachetools==6.2.0",
    "cbor2==5.7.0",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "comm==0.2.3",
    "compressed-tensors==0.10.2",
    "datasets==4.0.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "depyf==0.19.0",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "einops==0.8.1",
    "email-validator==2.3.0",
    "eval-type-backport==0.2.2",
    "executing==2.2.1",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.11",
    "fastapi-cloud-cli==0.1.5",
    "fastjsonschema==2.21.2",
    "filelock==3.19.1",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.3.0",
    "gdown==5.2.0",
    "gguf==0.17.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "hf-xet==1.1.10",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "interegular==0.3.3",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonlines==4.0.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.9",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "lark==1.2.2",
    "llguidance==0.7.30",
    "llvmlite==0.44.0",
    "lm-format-enforcer==0.10.12",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistral-common==1.8.5",
    "mistune==3.1.4",
    "mlx==0.29.1",
    "mlx-lm==0.27.1",
    "mlx-metal==0.29.1",
    "mpmath==1.3.0",
    "msgspec==0.19.0",
    "multidict==6.6.4",
    "multiprocess==0.70.16",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "ninja==1.13.0",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numba==0.61.2",
    "numpy==2.2.6",
    "openai==1.107.2",
    "openai-harmony==0.0.4",
    "opencv-python-headless==4.12.0.88",
    "outlines-core==0.2.10",
    "packaging==25.0",
    "pandas==2.3.2",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "partial-json-parser==0.2.1.1.post6",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prometheus-client==0.22.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==6.32.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py==1.11.0",
    "py-cpuinfo==9.0.0",
    "pyarrow==21.0.0",
    "pybase64==1.4.2",
    "pycountry==24.6.1",
    "pycparser==2.23",
    "pydantic==2.11.8",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pygments==2.19.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.1.0",
    "ratelimit==2.2.1",
    "referencing==0.36.2",
    "regex==2025.9.1",
    "requests==2.32.5",
    "retry==0.9.2",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.1.0",
    "rich-toolkit==0.15.1",
    "rignore==0.6.4",
    "rpds-py==0.27.1",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "segtok==1.5.11",
    "send2trash==1.8.3",
    "sentence-transformers==3.3.1",
    "sentencepiece==0.2.1",
    "sentry-sdk==2.37.1",
    "setproctitle==1.3.7",
    "setuptools==79.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soundfile==0.13.1",
    "soupsieve==2.8",
    "soxr==1.0.0",
    "stack-data==0.6.3",
    "starlette==0.47.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.11.0",
    "tinycss2==1.4.0",
    "together==1.5.26",
    "tokenizers==0.22.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.56.1",
    "typer==0.15.4",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uv==0.9.7",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "vllm>=0.10.1.1",
    "watchfiles==1.1.0",
    "wcwidth==0.2.14",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "xgrammar==0.1.21",
    "xxhash==3.5.0",
    "yarl==1.20.1",
]
